--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Site</h1>
+        <h1>Welcome My Site</h1>
     </header>
     <main>
         <p>This is my static website hosted on GitHub Pages!</p>
